<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07da5f"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/spl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="32.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="@font/proximanova_regular"
        android:gravity="center"
        android:lineSpacingExtra="11dp"
        android:text="@string/stroka"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/urgent"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:width="319dp"
        android:background="@drawable/round_shape_sign_btn"

        android:color="#ffffff"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/sign_up"
        android:textColor="#07da5f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="130dp"
        android:width="319dp"
        android:background="@drawable/round_shape_login_btn"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>