<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07da5f"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/spl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Tele_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/telemedicine"
        android:textColor="#ffffff"
        android:textSize="35.5sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_btn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="30dp"
        android:width="319dp"
        android:autofillHints=""
        android:background="@drawable/round_angle_empas"
        android:drawableLeft="@drawable/ic_icon_email"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:paddingStart="10dp"
        android:text="@string/email_adress"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tele_name" />

    <EditText
        android:id="@+id/password_btn"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:width="319dp"
        android:background="@drawable/round_angle_empas"
        android:drawableStart="@drawable/ic_icon_pass"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:paddingStart="10dp"
        android:text="@string/password"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="160dp"
        android:width="319dp"

        android:background="@drawable/round_shape_sign_btn"
        android:color="#ffffff"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/login"
        android:textColor="#07da5f"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="77dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>